added routes in pokedex app

--- a/pokedex/src/Components/PokemonList/pokemonList.css
+++ b/pokedex/src/Components/PokemonList/pokemonList.css
@@ -1,6 +1,23 @@
 .pokeframe{
     display: flex;
+    align-items: center;
+    justify-content: center;
     flex-wrap: wrap;
     gap: 8px;
     
+}
+.pokemonList-container{
+    margin-top: 20px;
+    flex-direction: column;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+.controls{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+    margin: 10px;
 }
